adds alert that force a user to fill out Profile info

--- a/Map.storyboard
+++ b/Map.storyboard
@@ -247,9 +247,12 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oxF-mO-YMb">
-                                        <rect key="frame" x="336.66666666666669" y="10" width="17.333333333333314" height="22"/>
+                                        <rect key="frame" x="332" y="10" width="22" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" image="xmark" catalog="system"/>
+                                        <state key="normal" image="xmark" catalog="system">
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="21"/>
+                                        </state>
                                         <connections>
                                             <action selector="closeBannerButton:" destination="fpw-Wl-p7n" eventType="touchUpInside" id="KE0-9l-ze9"/>
                                         </connections>
@@ -265,6 +268,7 @@
                                     </label>
                                     <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="5" translatesAutoresizingMaskIntoConstraints="NO" id="XDL-Aa-hy6">
                                         <rect key="frame" x="146.66666666666666" y="388" width="71" height="37"/>
+                                        <color key="pageIndicatorTintColor" red="0.13911497589999999" green="0.3948251009" blue="0.56501853469999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="currentPageIndicatorTintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </pageControl>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CHO-VJ-8YT">
