--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hRz-Do-Gk8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hRz-Do-Gk8">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -18,9 +18,9 @@
                         <color key="selectedImageTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="ikH-Tp-8CK" kind="relationship" relationship="viewControllers" id="IrE-SF-094"/>
-                        <segue destination="Dpx-MD-Fz9" kind="relationship" relationship="viewControllers" id="fRH-TW-h6r"/>
-                        <segue destination="yXn-Kl-J1m" kind="relationship" relationship="viewControllers" id="kKw-Q2-Nwo"/>
+                        <segue destination="ikH-Tp-8CK" kind="relationship" relationship="viewControllers" destinationCreationSelector="history" id="IrE-SF-094"/>
+                        <segue destination="Dpx-MD-Fz9" kind="relationship" relationship="viewControllers" destinationCreationSelector="map" id="fRH-TW-h6r"/>
+                        <segue destination="yXn-Kl-J1m" kind="relationship" relationship="viewControllers" destinationCreationSelector="profile" id="kKw-Q2-Nwo"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ko5-JP-5wt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
