--- a/My_Trackin_App_Watch_Extension/Base.lproj/Interface.storyboard
+++ b/My_Trackin_App_Watch_Extension/Base.lproj/Interface.storyboard
@@ -11,19 +11,24 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="My_Trackin_App_Watch_Extension" customModuleProvider="target">
                     <items>
-                        <group width="1" alignment="left" id="Omo-gF-SUF">
+                        <group width="1" height="38" alignment="center" contentMode="scaleAspectFill" id="Omo-gF-SUF">
                             <items>
-                                <imageView width="30" height="28" alignment="left" image="walk" id="kf9-eQ-XVb">
+                                <imageView width="30" height="28" alignment="center" image="cycling" id="kf9-eQ-XVb">
                                     <color key="tintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </imageView>
-                                <label width="103" height="29" alignment="left" text="00:00:00" textAlignment="center" minimumScaleFactor="0.80000000000000004" id="g3u-TF-wi8">
+                            </items>
+                            <edgeInsets key="margins" left="0.0" right="0.0" top="5" bottom="0.0"/>
+                        </group>
+                        <group width="1" height="33" alignment="left" id="o9a-hh-1QT">
+                            <items>
+                                <label width="131" height="29" alignment="center" text="00:00:00" textAlignment="center" minimumScaleFactor="0.90000000000000002" id="g3u-TF-wi8">
                                     <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="font" style="UICTFontTextStyleTitle1"/>
                                 </label>
                             </items>
-                            <edgeInsets key="margins" left="0.0" right="0.0" top="15" bottom="20"/>
+                            <edgeInsets key="margins" left="0.0" right="0.0" top="0.0" bottom="0.0"/>
                         </group>
-                        <button width="136" height="73" alignment="left" title="START" id="oPb-5j-01n">
+                        <button width="136" height="73" alignment="center" title="START" id="oPb-5j-01n">
                             <color key="backgroundColor" red="0.13911497589999999" green="0.3948251009" blue="0.56501853469999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="font" type="boldSystem" pointSize="19"/>
                             <connections>
@@ -38,7 +43,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="220" y="308"/>
+            <point key="canvasLocation" x="220" y="302.5"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -73,6 +78,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="walk" width="512" height="512"/>
+        <image name="cycling" width="512" height="512"/>
     </resources>
 </document>
