adds start/stop functionality

--- a/MyTrackingAppWatch/Base.lproj/Interface.storyboard
+++ b/MyTrackingAppWatch/Base.lproj/Interface.storyboard
@@ -23,6 +23,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="backgroundColor" red="0.13911497589999999" green="0.3948251009" blue="0.56501853469999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="font" type="boldSystem" pointSize="25"/>
+                                    <connections>
+                                        <action selector="startButton" destination="AgC-eL-Hgc" id="dIT-SX-rNz"/>
+                                    </connections>
                                 </button>
                             </items>
                             <edgeInsets key="margins" left="0.0" right="0.0" top="0.0" bottom="0.0"/>
