--- a/Map.storyboard
+++ b/Map.storyboard
@@ -257,7 +257,7 @@
                                             <action selector="closeBannerButton:" destination="fpw-Wl-p7n" eventType="touchUpInside" id="KE0-9l-ze9"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Customizable cards' set. Change the order and pick what important to you." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hpc-DR-WnL">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apple Watch extension." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hpc-DR-WnL">
                                         <rect key="frame" x="15" y="86" width="334" height="65"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="65" id="udB-Pl-l2g"/>
@@ -266,8 +266,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="5" translatesAutoresizingMaskIntoConstraints="NO" id="XDL-Aa-hy6">
-                                        <rect key="frame" x="146.66666666666666" y="388" width="71" height="37"/>
+                                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="6" translatesAutoresizingMaskIntoConstraints="NO" id="XDL-Aa-hy6">
+                                        <rect key="frame" x="138.66666666666666" y="388" width="87" height="37"/>
                                         <color key="pageIndicatorTintColor" red="0.13911497589999999" green="0.3948251009" blue="0.56501853469999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="currentPageIndicatorTintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </pageControl>
