--- a/MyTrackingAppWatch/Base.lproj/Interface.storyboard
+++ b/MyTrackingAppWatch/Base.lproj/Interface.storyboard
@@ -11,7 +11,7 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="MyTrackingAppWatch" customModuleProvider="target">
                     <items>
-                        <group width="136" height="158" alignment="left" layout="vertical" spacing="0.0" id="4vJ-aJ-wBX">
+                        <group width="136" height="158" alignment="center" layout="vertical" spacing="0.0" id="4vJ-aJ-wBX">
                             <items>
                                 <imageView width="32" height="31" alignment="center" image="walk" id="Jor-li-qqB">
                                     <color key="tintColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
