--- a/MyTrackingAppWatch/Base.lproj/Interface.storyboard
+++ b/MyTrackingAppWatch/Base.lproj/Interface.storyboard
@@ -6,10 +6,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="16012"/>
     </dependencies>
     <scenes>
-        <!--Interface Controller-->
+        <!--Main Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="MyTrackingAppWatch" customModuleProvider="target">
+                <controller id="AgC-eL-Hgc" userLabel="Main Interface Controller" customClass="InterfaceController" customModule="MyTrackingAppWatch" customModuleProvider="target">
                     <items>
                         <group width="136" height="158" alignment="center" layout="vertical" spacing="0.0" id="4vJ-aJ-wBX">
                             <items>
@@ -28,6 +28,13 @@
                                     </connections>
                                 </button>
                             </items>
+                            <gestureRecognizers>
+                                <swipeGestureRecognizer delaysTouchesBegan="YES" direction="2" id="W0f-0M-bFC">
+                                    <connections>
+                                        <action selector="leftSwipe:" destination="AgC-eL-Hgc" id="VCI-G9-w8A"/>
+                                    </connections>
+                                </swipeGestureRecognizer>
+                            </gestureRecognizers>
                             <edgeInsets key="margins" left="0.0" right="0.0" top="0.0" bottom="0.0"/>
                         </group>
                     </items>
@@ -38,7 +45,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="220" y="348.5"/>
+            <point key="canvasLocation" x="257" y="172"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -62,14 +69,117 @@
             <objects>
                 <controller id="4sK-HA-Art" customClass="NotificationController" customModule="MyTrackingAppWatch" customModuleProvider="target"/>
             </objects>
-            <point key="canvasLocation" x="468" y="643"/>
+            <point key="canvasLocation" x="220" y="993"/>
+        </scene>
+        <!--Summary Interface Controller-->
+        <scene sceneID="68n-69-lbK">
+            <objects>
+                <controller identifier="summary" id="yaB-gc-oh7" userLabel="Summary Interface Controller">
+                    <items>
+                        <group width="1" alignment="left" layout="vertical" id="Y9u-8j-r7b">
+                            <items>
+                                <group width="1" alignment="left" layout="vertical" id="45o-D9-7rz">
+                                    <items>
+                                        <label height="20" alignment="left" text="Time:" id="O2b-bG-vI7" userLabel="Time">
+                                            <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </label>
+                                        <label alignment="left" text="00:00:00" id="Xb4-9y-uTv"/>
+                                    </items>
+                                </group>
+                                <group width="1" alignment="left" layout="vertical" id="XYy-eW-hXD">
+                                    <items>
+                                        <label width="136" height="21" alignment="left" text="Distance:" id="lq3-SW-bse">
+                                            <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </label>
+                                        <group width="1" alignment="left" id="NZs-Zr-CSN">
+                                            <items>
+                                                <label alignment="left" text="0" id="enL-zI-L5J" userLabel="Value"/>
+                                                <label height="20" alignment="left" text="km" id="Yt7-KG-kH1" userLabel="Unit"/>
+                                            </items>
+                                        </group>
+                                    </items>
+                                </group>
+                                <group width="1" alignment="left" layout="vertical" id="Gxl-pS-qBz">
+                                    <items>
+                                        <label width="136" height="26" alignment="left" text="Speed / Avg speed:" id="7Xy-xa-hfG">
+                                            <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="font" style="UICTFontTextStyleCaption1"/>
+                                        </label>
+                                        <group width="1" alignment="left" id="Qq7-OE-QDc">
+                                            <items>
+                                                <label alignment="left" text="0" id="9Gq-vb-4pJ" userLabel="Value"/>
+                                                <label alignment="left" text="/" id="sJE-Nx-3yN" userLabel="Space"/>
+                                                <label alignment="left" text="0" id="MOW-0c-GEY" userLabel="Value"/>
+                                                <label height="20" alignment="left" text="km/h" id="alx-hY-JrF" userLabel="Unit"/>
+                                            </items>
+                                        </group>
+                                    </items>
+                                </group>
+                                <group width="1" alignment="left" layout="vertical" id="EG5-g7-6Hz">
+                                    <items>
+                                        <label height="20" alignment="left" text="Steps" id="ZNM-Ke-y36">
+                                            <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </label>
+                                        <group width="1" alignment="left" id="eGW-gz-RM6">
+                                            <items>
+                                                <label alignment="left" text="0" id="eqr-t8-4UH" userLabel="Value"/>
+                                                <label height="20" alignment="left" id="uSx-D3-hgs" userLabel="Unit"/>
+                                            </items>
+                                        </group>
+                                    </items>
+                                </group>
+                                <group width="1" alignment="left" layout="vertical" id="K88-Ao-MDw">
+                                    <items>
+                                        <label height="20" alignment="left" text="Paddles" id="KAF-yB-ght" userLabel="Paddles">
+                                            <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </label>
+                                        <group width="1" alignment="left" id="q5t-y9-Jp6">
+                                            <items>
+                                                <label alignment="left" text="0" id="A6p-uR-xq3" userLabel="Value"/>
+                                                <label height="20" alignment="left" id="Gvp-21-aL7" userLabel="Unit"/>
+                                            </items>
+                                        </group>
+                                    </items>
+                                </group>
+                                <group width="1" alignment="left" layout="vertical" id="P3h-L6-7Wu">
+                                    <items>
+                                        <label height="20" alignment="left" text="Calories" id="HQw-Uf-CMZ" userLabel="Heart rate">
+                                            <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </label>
+                                        <group width="1" alignment="left" id="Pn3-eY-KQV">
+                                            <items>
+                                                <label alignment="left" text="0" id="1zq-sa-sOI" userLabel="Value"/>
+                                                <label height="20" alignment="left" id="k1X-M5-ABN" userLabel="Unit"/>
+                                            </items>
+                                        </group>
+                                    </items>
+                                </group>
+                                <group width="1" alignment="left" layout="vertical" id="6ih-SS-XCQ">
+                                    <items>
+                                        <label height="20" alignment="left" text="Heart rate" id="Sg6-qo-sLE" userLabel="Calories">
+                                            <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </label>
+                                        <group width="1" alignment="left" id="RmI-KH-hno">
+                                            <items>
+                                                <label alignment="left" text="0" id="UJB-CA-qbK" userLabel="Value"/>
+                                                <label height="20" alignment="left" id="zBb-3s-zZK" userLabel="Unit"/>
+                                            </items>
+                                        </group>
+                                    </items>
+                                </group>
+                            </items>
+                        </group>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="484" y="-159"/>
         </scene>
         <!--Notification Controller-->
         <scene sceneID="Niz-AI-uX2">
             <objects>
                 <controller id="eXb-UN-Cd0" customClass="NotificationController" customModule="MyTrackingAppWatch" customModuleProvider="target"/>
             </objects>
-            <point key="canvasLocation" x="468" y="345"/>
+            <point key="canvasLocation" x="474" y="643"/>
         </scene>
     </scenes>
     <resources>
