--- a/Map.storyboard
+++ b/Map.storyboard
@@ -184,9 +184,9 @@
                                     </imageView>
                                 </subviews>
                             </stackView>
-                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="w.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="RiZ-YI-uO9">
-                                <rect key="frame" x="304" y="20.333333333333336" width="30" height="49.000000000000007"/>
-                                <color key="tintColor" red="0.13911497589999999" green="0.3948251009" blue="0.56501853469999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="applewatch" translatesAutoresizingMaskIntoConstraints="NO" id="RiZ-YI-uO9">
+                                <rect key="frame" x="304" y="20" width="30" height="50"/>
+                                <color key="tintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="56o-j0-sIq"/>
                                     <constraint firstAttribute="height" constant="50" id="7nC-AU-CSt"/>
@@ -415,11 +415,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="applewatch" width="64" height="64"/>
         <image name="gear" catalog="system" width="128" height="119"/>
         <image name="icons8-mountain-100" width="100" height="100"/>
         <image name="location.north.fill" catalog="system" width="108" height="128"/>
         <image name="map" catalog="system" width="128" height="113"/>
-        <image name="w.circle.fill" catalog="system" width="128" height="121"/>
         <image name="walk" width="512" height="512"/>
         <image name="xmark" catalog="system" width="128" height="113"/>
     </resources>
