--- a/MyTrackingAppWatch/Base.lproj/Interface.storyboard
+++ b/MyTrackingAppWatch/Base.lproj/Interface.storyboard
@@ -74,43 +74,53 @@
         <!--Summary Interface Controller-->
         <scene sceneID="68n-69-lbK">
             <objects>
-                <controller identifier="summary" id="yaB-gc-oh7" userLabel="Summary Interface Controller" customClass="SummaryInterface" customModule="MyTrackingAppWatch_Extension">
+                <controller identifier="summary" id="yaB-gc-oh7" userLabel="Summary Interface Controller" customClass="SummaryInterfaceController" customModule="MyTrackingAppWatch" customModuleProvider="target">
                     <items>
-                        <group width="1" alignment="left" layout="vertical" id="Y9u-8j-r7b">
+                        <group width="136" height="467" alignment="center" layout="vertical" spacing="9" id="Y9u-8j-r7b">
                             <items>
-                                <group width="1" alignment="left" layout="vertical" id="45o-D9-7rz" userLabel="Timer Group">
+                                <group width="1" alignment="center" layout="vertical" spacing="6" id="45o-D9-7rz" userLabel="Timer Group">
                                     <items>
                                         <label height="20" alignment="left" text="Time:" id="O2b-bG-vI7" userLabel="Time">
                                             <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
                                         </label>
-                                        <label alignment="left" text="00:00:00" id="Xb4-9y-uTv"/>
+                                        <label width="110" height="20" alignment="left" text="00:00:00" id="Xb4-9y-uTv">
+                                            <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
+                                        </label>
                                     </items>
                                 </group>
                                 <group width="1" alignment="left" layout="vertical" id="XYy-eW-hXD" userLabel="Distance Group">
                                     <items>
                                         <label width="136" height="21" alignment="left" text="Distance:" id="lq3-SW-bse">
                                             <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
                                         </label>
                                         <group width="1" alignment="left" id="NZs-Zr-CSN">
                                             <items>
-                                                <label alignment="left" text="0" id="enL-zI-L5J" userLabel="Value"/>
-                                                <label height="20" alignment="left" text="km" id="Yt7-KG-kH1" userLabel="Unit"/>
+                                                <label alignment="left" text="0.0" id="enL-zI-L5J" userLabel="Value">
+                                                    <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
+                                                </label>
+                                                <label height="20" alignment="left" verticalAlignment="center" text=", km" id="Yt7-KG-kH1" userLabel="Unit"/>
                                             </items>
                                         </group>
                                     </items>
                                 </group>
                                 <group width="1" alignment="left" layout="vertical" id="Gxl-pS-qBz" userLabel="Speed Group">
                                     <items>
-                                        <label width="136" height="26" alignment="left" text="Speed / Avg speed:" id="7Xy-xa-hfG">
+                                        <label width="136" height="50" alignment="left" text="Speed / Avg speed:" numberOfLines="2" id="7Xy-xa-hfG">
                                             <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <fontDescription key="font" style="UICTFontTextStyleCaption1"/>
+                                            <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
                                         </label>
                                         <group width="1" alignment="left" id="Qq7-OE-QDc">
                                             <items>
-                                                <label alignment="left" text="0" id="9Gq-vb-4pJ" userLabel="Value"/>
-                                                <label alignment="left" text="/" id="sJE-Nx-3yN" userLabel="Space"/>
-                                                <label alignment="left" text="0" id="MOW-0c-GEY" userLabel="Value"/>
-                                                <label height="20" alignment="left" text="km/h" id="alx-hY-JrF" userLabel="Unit"/>
+                                                <label alignment="left" text="0.0" id="9Gq-vb-4pJ" userLabel="Value">
+                                                    <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
+                                                </label>
+                                                <label alignment="left" text=" / " id="sJE-Nx-3yN" userLabel="Space"/>
+                                                <label alignment="left" text="0.0" id="MOW-0c-GEY" userLabel="Value">
+                                                    <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
+                                                </label>
+                                                <label height="20" alignment="left" verticalAlignment="center" text=" , km/h" id="alx-hY-JrF" userLabel="Unit"/>
                                             </items>
                                         </group>
                                     </items>
@@ -119,10 +129,13 @@
                                     <items>
                                         <label height="20" alignment="left" text="Steps" id="ZNM-Ke-y36">
                                             <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
                                         </label>
                                         <group width="1" alignment="left" id="eGW-gz-RM6">
                                             <items>
-                                                <label alignment="left" text="0" id="eqr-t8-4UH" userLabel="Value"/>
+                                                <label alignment="left" text="0" id="eqr-t8-4UH" userLabel="Value">
+                                                    <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
+                                                </label>
                                                 <label height="20" alignment="left" id="uSx-D3-hgs" userLabel="Unit"/>
                                             </items>
                                         </group>
@@ -132,10 +145,13 @@
                                     <items>
                                         <label height="20" alignment="left" text="Paddles" id="KAF-yB-ght" userLabel="Paddles">
                                             <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
                                         </label>
                                         <group width="1" alignment="left" id="q5t-y9-Jp6">
                                             <items>
-                                                <label alignment="left" text="0" id="A6p-uR-xq3" userLabel="Value"/>
+                                                <label alignment="left" text="0" id="A6p-uR-xq3" userLabel="Value">
+                                                    <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
+                                                </label>
                                                 <label height="20" alignment="left" id="Gvp-21-aL7" userLabel="Unit"/>
                                             </items>
                                         </group>
@@ -145,11 +161,14 @@
                                     <items>
                                         <label height="20" alignment="left" text="Calories" id="HQw-Uf-CMZ" userLabel="Heart rate">
                                             <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
                                         </label>
                                         <group width="1" alignment="left" id="Pn3-eY-KQV">
                                             <items>
-                                                <label alignment="left" text="0" id="1zq-sa-sOI" userLabel="Value"/>
-                                                <label height="20" alignment="left" id="k1X-M5-ABN" userLabel="Unit"/>
+                                                <label alignment="left" text="0" id="1zq-sa-sOI" userLabel="Value">
+                                                    <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
+                                                </label>
+                                                <label height="20" alignment="left" text=" , kcal" id="k1X-M5-ABN" userLabel="Unit"/>
                                             </items>
                                         </group>
                                     </items>
@@ -158,21 +177,37 @@
                                     <items>
                                         <label height="20" alignment="left" text="Heart rate" id="Sg6-qo-sLE" userLabel="Calories">
                                             <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
                                         </label>
                                         <group width="1" alignment="left" id="RmI-KH-hno">
                                             <items>
-                                                <label alignment="left" text="0" id="UJB-CA-qbK" userLabel="Value"/>
-                                                <label height="20" alignment="left" id="zBb-3s-zZK" userLabel="Unit"/>
+                                                <label alignment="left" text="0" id="UJB-CA-qbK" userLabel="Value">
+                                                    <fontDescription key="font" style="UICTFontTextStyleTitle3"/>
+                                                </label>
+                                                <label height="20" alignment="left" text=", bpm" id="zBb-3s-zZK" userLabel="Unit"/>
                                             </items>
                                         </group>
                                     </items>
                                 </group>
                             </items>
+                            <edgeInsets key="margins" left="0.0" right="0.0" top="25" bottom="0.0"/>
                         </group>
                     </items>
+                    <connections>
+                        <outlet property="avgSpeedLabel" destination="MOW-0c-GEY" id="dar-cq-BKh"/>
+                        <outlet property="caloriesLabel" destination="1zq-sa-sOI" id="9uJ-Ra-mDP"/>
+                        <outlet property="distanceLabel" destination="enL-zI-L5J" id="J8M-Qi-0Hl"/>
+                        <outlet property="distanceUnitLabel" destination="Yt7-KG-kH1" id="hZk-Ox-xtV"/>
+                        <outlet property="heartRateLabel" destination="UJB-CA-qbK" id="Hsp-Hc-BAg"/>
+                        <outlet property="paddlesLabel" destination="A6p-uR-xq3" id="aKf-iQ-K1b"/>
+                        <outlet property="speedLabel" destination="9Gq-vb-4pJ" id="N4Y-qE-pyv"/>
+                        <outlet property="speedUnitLabel" destination="alx-hY-JrF" id="ISA-FL-EMz"/>
+                        <outlet property="stepsLabel" destination="eqr-t8-4UH" id="zco-GK-oy1"/>
+                        <outlet property="timerLabel" destination="Xb4-9y-uTv" id="fzJ-0Q-l3W"/>
+                    </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="484" y="-159"/>
+            <point key="canvasLocation" x="484" y="-95"/>
         </scene>
         <!--Notification Controller-->
         <scene sceneID="Niz-AI-uX2">
